feature: highlight color

--- a/theme.css
+++ b/theme.css
@@ -3,7 +3,8 @@
 1. set different header color for header 1-3
 2. disable header color 4-6
 3. disable inline title color
-4. set highlight text color to accent
+4. disable external link color
+5. set highlight text color to accent
 */
 
 body {
