--- a/theme.css
+++ b/theme.css
@@ -11,8 +11,7 @@ body {
   /* set accent things pink */
   --accent-h: 337; /* Accent hue */
   --accent-s: 100%; /* Accent saturation */
-  /* --accent-d: 70%; Accent lightness Dark Mode */
-  --accent-l: 75%; /* Accent lightness Light Mode */
+  --accent-l: 75%; /* Accent lightness */
 
   /* !! ditinguish light and dark theme */
   --things-blue: #2e80f2;
@@ -26,16 +25,18 @@ body {
   --h1-color: var(--things-blue);
   --h2-color: var(--things-green);
   --h3-color: var(--things-purple);
+
+  /* set --text-normal or inherit */
   --h4-color: var(--text-normal);
   --h5-color: var(--text-normal);
   --h6-color: var(--text-normal);
 
-  /* --h1-size: 1rem;
+  --h1-size: 1rem;
   --h2-size: 1rem;
   --h3-size: 1rem;
   --h4-size: 1rem;
   --h5-size: 1rem;
-  --h6-size: 1rem; */
+  --h6-size: 1rem;
 }
 
 /* cover all header style */
